--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Learn to live!
-description: This is my technical blog
+title: 
+description: 
 github_username: manisha_dubey
 
 # Email and twitter are optional:
